updated Controller